# autibot

./: .flake8  .gitignore  Dockerfile  MAINTENANCE.md  Makefile  README.md  RELEASE_NOTES.md  autibot.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml  tests.yml
app/: AskAI.JSON  autibot.py  chatbot.py  discord.py  discord_bot.py  llm.py  test_vector_db.py  utils.py  vector_db.py
tests/: conftest.py  test_chatbot.py  test_llm.py  test_vector_db.py
