[tool.poetry]
name = "autibot"
version = "0.1.0"
description = "RAG based chatbot trained on autism specific documents"
authors = ["fannijako <fannijako@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"
langchain-huggingface = "^0.1.2"
astrapy = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
