[tool.poetry]
name = "autibot"
version = "0.1.0"
description = "RAG based chatbot trained on autism specific documents"
authors = ["fannijako <fannijako@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Upper bound <3.15 keeps Poetry's resolver compatible with triton (a torch
# transitive). The CI matrix only exercises 3.11 and 3.12.
python = ">=3.11,<3.15"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.0"
# Bumped from ^0.1.2 to ^1.2.2 to pull in langchain-core >=1.2.31, which
# resolves GHSA-qh6h-p6c9-ff54 (high) and GHSA-2g6r-c272-w58r (low).
langchain-huggingface = "^1.2.2"
astrapy = "^1.5.2"
# Transitive security floor — resolves GHSA-887c-mr87-cxwp (medium).
torch = ">=2.8.0"
# Used directly in app/llm.py (AutoTokenizer). Was previously transitive via
# langchain-huggingface 0.1.2; on 1.2.2 it only ships under the [full] extra.
transformers = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
flake8 = "^7.0.0"
# GHSA-6w46-j5rx-g56g (medium) — vulnerable tmpdir handling.
pytest = "^9.0.3"
# Bumped from ^0.23.0 — older versions cap pytest at <9.
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pylint."messages control"]
# C0114 missing-module-docstring, C0116 missing-function-docstring: tests and
#       small helpers don't need them.
# W1203 logging-fstring-interpolation: project uses f-strings in logging.
# W0603 global-statement, W0718 broad-exception-caught: deliberate in bot
#       error-handling and singletons.
# E0401 import-error: third-party imports aren't installed in lint-only CI jobs.
disable = ["C0114", "C0116", "W1203", "W0603", "W0718", "E0401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
